src/objects/Promo_Code_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if this promo code is still active for tor the assigned subscription.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DAZN_Subscription__c</fullName>
        <description>Subscription where the promo code is affected.</description>
        <label>DAZN Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Promo Code x Subscription</relationshipLabel>
        <relationshipName>Promo_Code_x_Subscription</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promo code used for this record/discount</description>
        <label>Promo Code</label>
        <referenceTo>PromoCode__c</referenceTo>
        <relationshipLabel>Promo Code x Subscription</relationshipLabel>
        <relationshipName>Promo_Code_x_Subscription</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promo Code x Subscription</label>
    <nameField>
        <displayFormat>Promo-{000000000}</displayFormat>
        <label>Promo Code Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Code Subscription</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>